# ddg-router

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ddg_router/: __init__.py  __main__.py  server.py
tests/: test_router.py
